tests/parser/good/self/4.lat
int a() { return 0; }
int b(int a, int b, int c) { return a + b + c; }
