tests/parser/bad/variable_use/7.lat
int main() {
    boolean a;
    boolean b;
    boolean c;
    c = a + b;
    return 0;
}